k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-project-manager
spec:
  selector:
    app: personal-project-manager
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
